# json-haskell

./: Main  Main.hs  README.md  json-haskell.cabal
app/: Main.hs
src/: JsonParser.hs
test/: Spec.hs  TestDriver.hs  test.json
