cabal-version:      3.8
name:               json-haskell
version:            0.1.0.0
license:            NONE
author:             Chi Nguyen
maintainer:         buichinguyen1105@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  JsonParser
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable json-haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        json-haskell
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite json-haskell-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.18.3.0,
        json-haskell,
        hspec,
        QuickCheck